# Traditional-Rag-Implemetation-Draft

./: .gitignore  pyproject.toml
data/text_files/: RAG_example.txt
data/vector_store/: chroma.sqlite3
data/vector_store/78df4df5-d089-4086-a2ce-475589f536a1/: index_metadata.pickle
notebook/: pdf_loader.ipynb
